tests/baselines/reference/parserUnterminatedGeneric1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts(2,23): error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts(2,45): error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts(2,54): error TS1005: '>' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric1.ts (3 errors) ====
     interface IQService {
            all(promises: IPromise < any > []): IPromise<
                          ~~~~~~~~
!!! error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
                                                ~~~~~~~~
!!! error TS2552: Cannot find name 'IPromise'. Did you mean 'Promise'?
                                                         
!!! error TS1005: '>' expected.